finalização do html

--- a/teto-blog/index.html
+++ b/teto-blog/index.html
@@ -20,7 +20,17 @@
     </header>
 
     <main>
-        
+        <ansaide>
+            <h1>teto</h1>
+
+            <p>Conhecido como "Rei das prévias". Teto é um cantor baiano que ao passar dos
+             anos vem conquistando cada vez mais fama pelas suas músicas do gênero trap.</p>
+
+            <input type="button" value="Antes de tudo, qual é o seu nome?" name="name">
+            <input type="button" value="Esse é meu nome!" name="confirma-nome">
+        </ansaide>
+
+        <img src="/src/img/background.png" alt="foto do teto">
     </main>
 </body>
 </html>
