mudança na estrutura de arquivos / header e ansaide do css quase feitos

--- a/teto-blog/index.html
+++ b/teto-blog/index.html
@@ -10,24 +10,27 @@
 <body>
     <header>
         <ul>   
-            <a href="#"><li> <img src="/src/icons/header/icons8-livro-32.png" alt="Ícone do livro" id="ícones">  História</li></a> <!--<a target="_blank" href="https://icons8.com/icon/22940/livro">Livro</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
-            <a href="#"><li> <img src="/src/icons/header/icons8-fones-de-ouvido-16.png" alt="Ícone de fone" id="ícones">  Música</li></a> <!--<a target="_blank" href="https://icons8.com/icon/43759/fones-de-ouvido">Fones de ouvido</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
-            <a href="#"><li> <img src="/src/icons/header/icons8-troféu-48.png" alt="Ícone de troféu" id="ícones">  Prêmio</li></a> <!--<a target="_blank" href="https://icons8.com/icon/6YtrB5VnlPqY/trof%C3%A9u">Troféu</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
-            <a href="#"><li> <img src="/src/icons/header/icons8-câmera-24.png" alt="Ícone de fotos" id="ícones">  Fotos</li></a> <!--<a target="_blank" href="https://icons8.com/icon/85001/c%C3%A2mera">Câmera</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
-            <a href="#"><li> <img src="/src/icons/header/icons8-microfone-2-32.png" alt="Ícone de microfone" id="ícones">  Shows</li></a> <!--<a target="_blank" href="https://icons8.com/icon/17774/microfone-2">Microfone 2</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
-            <a href="#"><li>  <img src="/src/icons/header/icons8-chamada-de-vídeo-32.png" alt="Ícone de camera gravadora" id="ícones">  Vídeos</li></a> <!--<a target="_blank" href="https://icons8.com/icon/14210/chamada-de-v%C3%ADdeo">Chamada de vídeo</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
+            <a href="#"><li> <img src="/src/icons/header/icons8-livro-32.png" alt="Ícone do livro" class="icones">  História</li></a> <!--<a target="_blank" href="https://icons8.com/icon/22940/livro">Livro</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
+            <a href="#"><li> <img src="/src/icons/header/icons8-fones-de-ouvido-16.png" alt="Ícone de fone" class="icones">  Música</li></a> <!--<a target="_blank" href="https://icons8.com/icon/43759/fones-de-ouvido">Fones de ouvido</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
+            <a href="#"><li> <img src="/src/icons/header/icons8-troféu-48.png" alt="Ícone de troféu" class="icones">  Prêmio</li></a> <!--<a target="_blank" href="https://icons8.com/icon/6YtrB5VnlPqY/trof%C3%A9u">Troféu</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
+            <a href="#"><li> <img src="/src/icons/header/icons8-câmera-24.png" alt="Ícone de fotos" class="icones">  Fotos</li></a> <!--<a target="_blank" href="https://icons8.com/icon/85001/c%C3%A2mera">Câmera</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
+            <a href="#"><li> <img src="/src/icons/header/icons8-microfone-2-32.png" alt="Ícone de microfone" class="icones">  Shows</li></a> <!--<a target="_blank" href="https://icons8.com/icon/17774/microfone-2">Microfone 2</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
+            <a href="#"><li>  <img src="/src/icons/header/icons8-chamada-de-vídeo-32.png" alt="Ícone de camera gravadora" class="icones">  Vídeos</li></a> <!--<a target="_blank" href="https://icons8.com/icon/14210/chamada-de-v%C3%ADdeo">Chamada de vídeo</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
         </ul>
     </header>
 
     <main>
         <ansaide>
-            <h1>teto</h1>
+            <h1>TETO</h1>
 
             <p>Conhecido como "Rei das prévias". Teto é um cantor baiano que ao passar dos
              anos vem conquistando cada vez mais fama pelas suas músicas do gênero trap.</p>
+                
+            <form>
+                <input type="text" placeholder="Antes de tudo, qual é o seu nome?" name="name" id="name">
+                <input type="text" value="Esse é meu nome!" name="confirma-nome">
+            </form>
 
-            <input type="button" value="Antes de tudo, qual é o seu nome?" name="name">
-            <input type="button" value="Esse é meu nome!" name="confirma-nome">
         </ansaide>
 
         <img src="/src/img/background.png" alt="foto do teto">
