--- a/teto-blog/index.html
+++ b/teto-blog/index.html
@@ -27,8 +27,8 @@
              anos vem conquistando cada vez mais fama pelas suas músicas do gênero trap.</p>
                 
             <form>
-                <input type="text" placeholder="Antes de tudo, qual é o seu nome?" name="name" id="name">
-                <input type="text" value="Esse é meu nome!" name="confirma-nome">
+                <input type="text" placeholder="   Antes de tudo, qual é o seu nome?" name="name" id="name">
+                <input type="button" value="Esse é meu nome!" name="confirma-nome" id="confirma">
             </form>
 
         </ansaide>
