ajuste da imagem do teto / mudanca na fonte do p / ajustamento geral no layout

--- a/teto-blog/index.html
+++ b/teto-blog/index.html
@@ -33,7 +33,7 @@
 
         </ansaide>
 
-        <img src="/src/img/background.png" alt="foto do teto">
+        <img src="/src/img/zyro-image.png" alt="foto do teto">
     </main>
 </body>
 </html>
