--- a/home/teto-blog/index.html
+++ b/home/teto-blog/index.html
@@ -27,13 +27,15 @@
              anos vem conquistando cada vez mais fama pelas suas músicas do gênero trap.</p>
                 
             <form>
-                <input type="text" placeholder="   Antes de tudo, qual é o seu nome?" name="name" id="name">
-                <input type="button" value="Esse é meu nome!" name="confirma-nome" id="confirma">
+                <input type="text" placeholder="   Antes de tudo, qual é o seu nome?" name="nome" id="name">
+                <input type="button" value="Esse é meu nome!" name="confirma-nome" id="confirma" onclick="ola(nome)">
             </form>
 
         </ansaide>
 
         <img src="/home/src/home/img/zyro-image.png" alt="foto do teto">
     </main>
+
+<script src="/home/teto-blog/resources/JavaScript/script.js"></script>
 </body>
 </html>
