--- a/teto-blog/music.html
+++ b/teto-blog/music.html
@@ -13,14 +13,14 @@
     <selection class="card">
         <div class="icon">
             <img src="/src/music/capas/minhavidaeumfilme.jpeg" alt="Teto álbum" height="300px" width="300px">
-        </div>
+        </div> 
         
         <h3>Minha vida é um filme</h3>
 
         <Span>Teto</Span>
 
-        <button><a href="https://www.youtube.com/watch?v=XxE7bZlyiNw">Escutar no Youtube</a></button>
-        <button><a href="https://open.spotify.com/album/2yLHPvXcoZ3Zu8X5XY8Cpj?si=z6GcIXFqRnSVQ0IBV0uAVw">Escutar no Spotify</a></button>
+        <button id="youtube"><a href="https://www.youtube.com/watch?v=XxE7bZlyiNw"> <img src="/src/music/icons/yt-removebg-preview (1).png" alt="youtube icon" class="icones"> Escutar no Youtube</a></button>
+        <button id="spotify"><a href="https://open.spotify.com/album/2yLHPvXcoZ3Zu8X5XY8Cpj?si=z6GcIXFqRnSVQ0IBV0uAVw"> <img src="/src/music/icons/icone-spotify-noir.png" alt="spotify icon" class="icones"> Escutar no Spotify</a></button>
     </selection>
   </main>
 
