mudança para 1.05 no scale

--- a/teto-blog/music.html
+++ b/teto-blog/music.html
@@ -19,8 +19,8 @@
 
         <Span>Teto</Span>
 
-        <button id="youtube"><a href="https://www.youtube.com/watch?v=XxE7bZlyiNw"> <img src="/src/music/icons/yt-removebg-preview (1).png" alt="youtube icon" class="icones"> Escutar no Youtube</a></button>
-        <button id="spotify"><a href="https://open.spotify.com/album/2yLHPvXcoZ3Zu8X5XY8Cpj?si=z6GcIXFqRnSVQ0IBV0uAVw"> <img src="/src/music/icons/icone-spotify-noir.png" alt="spotify icon" class="icones"> Escutar no Spotify</a></button>
+        <button id="youtube"><a href="https://www.youtube.com/watch?v=XxE7bZlyiNw" target="_blank"> <img src="/src/music/icons/yt-removebg-preview (1).png" alt="youtube icon" class="icones"> Escutar no Youtube</a></button>
+        <button id="spotify"><a href="https://open.spotify.com/album/2yLHPvXcoZ3Zu8X5XY8Cpj?si=z6GcIXFqRnSVQ0IBV0uAVw" target="_blank"> <img src="/src/music/icons/icone-spotify-noir.png" alt="spotify icon" class="icones"> Escutar no Spotify</a></button>
     </selection>
   </main>
 
