--- a/src/pages/music.html
+++ b/src/pages/music.html
@@ -28,16 +28,23 @@
         <h3>Minha vida é um filme</h3>
 
         <Span>Teto</Span>
-      <div class="navbar">
-        <div class="box">
-          <div class="icon-s">
+      
+      <div 
+      class="box">
+        <a 
+        href="https://open.spotify.com/track/0FBV7lozkqCSuV2q24n43x?si=b3361f32e9184cca"
+        target="_blank"
+        >
+          <div 
+          class="icon-s">
             <img 
             src="/src/resources/icons/music/icons/icone-spotify-noir.png" 
             alt="spotify icon" 
             class="icones">
           </div>
+
           <p>Spotify</p>
-        </div>
+        </a>
       </div>
 
     </selection>
