--- a/src/pages/music.html
+++ b/src/pages/music.html
@@ -28,18 +28,40 @@
         <h3>Minha vida é um filme</h3>
 
         <Span>Teto</Span>
-      
+    
+      <!--Botão do spotify-->
       <div 
       class="box">
         <a 
         href="https://open.spotify.com/track/0FBV7lozkqCSuV2q24n43x?si=b3361f32e9184cca"
         target="_blank"
+        class="spotify"
         >
           <div 
           class="icon-s">
             <img 
             src="/src/resources/icons/music/icons/icone-spotify-noir.png" 
             alt="spotify icon" 
+            class="icones">
+          </div>
+
+          <p>Spotify</p>
+        </a>
+      </div>
+
+    <!--Botão do yt-->
+      <div 
+      class="box">
+        <a c
+        href="https://open.spotify.com/track/0FBV7lozkqCSuV2q24n43x?si=b3361f32e9184cca"
+        target="_blank"
+        class="youtube"
+        >
+          <div 
+          class="icon-s">
+            <img 
+            src="/src/resources/icons/music/icons/yt-removebg-preview (1).png" 
+            alt="Youtube icon" 
             class="icones">
           </div>
 
