problema no botão dos card resolvido

--- a/src/pages/music.html
+++ b/src/pages/music.html
@@ -125,7 +125,8 @@
                         <a 
                         href="https://open.spotify.com/track/0FBV7lozkqCSuV2q24n43x?si=b3361f32e9184cca"
                         target="_blank"
-                        class="spotify">
+                        class="spotify"
+                        id="botao">
 
                             <div 
                             class="icon-s">
@@ -142,10 +143,11 @@
                     <!--Botão do yt-->
                     <div 
                     class="box">
-                        <a c
+                        <a 
                         href="https://www.youtube.com/watch?v=XxE7bZlyiNw"
                         target="_blank"
-                        class="youtube">
+                        class="youtube"
+                        id="botao">
 
                           <div 
                           class="icon-s">
@@ -179,47 +181,47 @@
                     <Span>Teto</Span>
                 
                     <!--Botão do spotify-->
-                        <div 
-                        class="box">
-                            <a 
-                            href="https://open.spotify.com/track/7afaZ37wJJL6880z1NRgJS?si=a34d97283d294fc4"
-                            target="_blank"
-                            class="spotify">
-
-                                <div 
-                                class="icon-s">
-                                    <img 
-                                    src="/src/resources/icons/music/icons/icone-spotify-noir.png" 
-                                    alt="spotify icon" 
-                                    class="icones">
-                                </div>
-
-                                <p>Spotify</p>
-                            </a>
-                        </div>
-
-                    <!--Botão do yt-->
-                        <div 
-                        class="box">
-                        <a c
-                        href="https://www.youtube.com/watch?v=7AlAYttGnAg"
+                    <div 
+                    class="box">
+                        <a 
+                        href="https://open.spotify.com/track/7afaZ37wJJL6880z1NRgJS?si=a34d97283d294fc4"
                         target="_blank"
-                        class="youtube"
-                        >
-                          <div 
-                          class="icon-s">
-                            <img 
-                            src="/src/resources/icons/music/icons/yt-removebg-preview (1).png" 
-                            alt="Youtube icon" 
-                            class="icones">
-                          </div>
+                        class="spotify"
+                        id="botao">
 
-                          <p>Youtube</p>
+                            <div 
+                            class="icon-s">
+                                <img 
+                                src="/src/resources/icons/music/icons/icone-spotify-noir.png" 
+                                alt="spotify icon" 
+                                class="icones">
+                            </div>
+
+                            <p>Spotify</p>
                         </a>
+                    </div>
+
+                      <!--Botão do yt-->
+                      <div 
+                      class="box">
+                          <a
+                          href="https://www.youtube.com/watch?v=7AlAYttGnAg"
+                          target="_blank"
+                          class="youtube"
+                          id="botao">
+
+                              <div 
+                              class="icon-s">
+                                  <img 
+                                  src="/src/resources/icons/music/icons/yt-removebg-preview (1).png" 
+                                  alt="Youtube icon" 
+                                  class="icones">
+                              </div>
+
+                              <p>Youtube</p>
+                           </a>
                       </div>
-
-    </section>
-  </main>
-
+                      </section>
+  </main> 
 </body>
 </html>
