Adionamento da home

--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 <body>
     <header>
 
-        <ul>   
+        <ul>
+            <a 
+            href="/index.html">
+                <li> 
+                    <img 
+                    src="/src/resources/icons/music/icons/icons8-casa-32.png" 
+                    alt="Ícone do livro" 
+                    class="icones">  
+
+                    Home
+                </li>
+            </a> 
+
             <a 
             href="#">
                 <li> 
@@ -125,7 +137,7 @@
     </main>
 
 <script 
-    src="/teto-blog/resources/JavaScript/script.js">
+    src="/src/resources/js/script.js">
 </script>
 
 </body>
