--- a/src/pages/music.html
+++ b/src/pages/music.html
@@ -12,7 +12,19 @@
 
     <!--Cabeçalho-->
     <header class="menu">
-      <ul>   
+      <ul>  
+        <a 
+        href="/index.html">
+            <li> 
+                <img 
+                src="/src/resources/icons/music/icons/icons8-casa-32.png" 
+                alt="Ícone do livro" 
+                class="iconess">  
+
+                Home
+            </li>
+        </a> 
+        
           <a 
           href="#">
               <li> 
