adiconamento do link da bio nos a e mudança de estrutura na bio

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </a> 
 
             <a 
-            href="#">
+            href="/src/pages/bio.html">
                 <li> 
                     <img 
                     src="/src/resources/icons/home/header/icons8-livro-32.png" 
@@ -36,8 +36,7 @@
             </a> <!--<a target="_blank" href="https://icons8.com/icon/22940/livro">Livro</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
 
             <a 
-            href="/src/pages/music.html" 
-            onclick="music()">
+            href="/src/pages/music.html">
                 <li> 
                     <img 
                     src="/src/resources/icons/home/header/icons8-fones-de-ouvido-16.png" 
