--- a/src/pages/music.html
+++ b/src/pages/music.html
@@ -27,7 +27,7 @@
         </a> 
         
           <a 
-          href="#">
+          href="/src/pages/bio.html">
               <li> 
                   <img 
                   src="/src/resources/icons/home/header/icons8-livro-32.png" 
