galeria feita, mas falta organização de fotos

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <!--<a target="_blank" href="https://icons8.com/icon/6YtrB5VnlPqY/trof%C3%A9u">Troféu</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
 
             <a 
-            href="#">
+            href="/src/pages/fotos.html">
                 <li> 
                     <img 
                     src="/src/resources/icons/home/header/icons8-câmera-24.png" 
