--- a/src/pages/fotos.html
+++ b/src/pages/fotos.html
@@ -111,31 +111,35 @@
       <main>
         <div class="container">
             <div class="itens">
-                <img src="/src/resources/images/fotos/ft1.jpg" alt="teto">
+                <img src="/src/resources/images/fotos/foto1.jpeg" alt="teto">
             </div>
 
             <div class="itens">
-                <img src="/src/resources/images/fotos/ft2.webp" alt="teto">
+                <img src="/src/resources/images/fotos/foto2.jpeg" alt="teto">
             </div>
 
             <div class="itens">
-                <img src="/src/resources/images/fotos/ft3.jpg" alt="teto">
+                <img src="/src/resources/images/fotos/foto3.jpeg" alt="teto">
             </div>
 
             <div class="itens">
-                <img src="/src/resources/images/fotos/ft4.jpg" alt="teto">
+                <img src="/src/resources/images/fotos/foto4.jpeg" alt="teto">
             </div>
 
             <div class="itens">
-                <img src="/src/resources/images/fotos/ft5.jpg" alt="teto">
+                <img src="/src/resources/images/fotos/foto5" alt="teto">
             </div>
 
             <div class="itens">
-                <img src="/src/resources/images/fotos/ft6.jpg" alt="teto">
+                <img src="/src/resources/images/fotos/foto6.jpeg" alt="teto">
             </div>
 
             <div class="itens">
-                <img src="/src/resources/images/fotos/ft7.jpg" alt="teto">
+                <img src="/src/resources/images/fotos/foto7.jpeg" alt="teto">
+            </div>
+
+            <div class="itens">
+                <img src="/src/resources/images/fotos/foto8" alt="teto">
             </div>
         </div>
       </main>
