--- a/src/pages/music.html
+++ b/src/pages/music.html
@@ -79,7 +79,7 @@
           <!--<a target="_blank" href="https://icons8.com/icon/85001/c%C3%A2mera">Câmera</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
 
           <a 
-          href="#">
+          href="/src/pages/show.html">
               <li> 
                   <img 
                   src="/src/resources/icons/home/header/icons8-microfone-2-32.png" 
